# ai001-p1

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: hanets.ipynb  template.ipynb
